--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,15 @@
 
 #app{
     height: 100vh;
+    width: 100%;
+
+   
+}
+
+.clearflix::after{
+    display: block;
+    clear: both;
+    content:'';
 }
 
 .flex{
@@ -17,7 +26,11 @@
 .wrapper{
     width: 100%;
     height: 100%;
-    background-color: rgb(150, 150, 150);
+    width: 100%;
+
+    background: linear-gradient(to bottom, #009688 0px, #009688 15vh,
+    #dddbd1 15vh, #d2dbdc 100%);
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +59,7 @@
 .mio-profilo{
     
     justify-content: space-between;
-    background-color: lightgray;
+    background-color: #eaeaea;
     height: 50px;
    
 }
@@ -70,7 +83,7 @@
 
 .notifiche{
     height: 50px;
-    background-color: rgb(132, 239, 239);
+    background-color: #8edafc;
 }
 
 .campana{
@@ -91,6 +104,7 @@
 }
 .contenitore-ricerca{
     width: 100%;
+    background-color: #fafafa;
     
 }
 
@@ -123,6 +137,7 @@
     margin-bottom: 5px;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
 }
 .utente:hover{
     background-color: rgb(213, 207, 207);
@@ -138,7 +153,7 @@
 
 .chat-con-amico{
     width: 100%;
-    background-color: lightgray;
+    background-color: #eaeaea;
     justify-content: space-between;
     align-items: center;
     height: 50px;
@@ -161,6 +176,7 @@
     width: 100%;
     height: calc(100% - 100px);
     background-image: url(../\ img\ 11.39.57/mine.jpg);
+    padding: 2rem;
 }
 
 .text-area-amico{
@@ -172,6 +188,7 @@
 .tastiera{
     justify-content: space-between;
     align-items: center;
+    background-color: #f3eeea;
 }
 
 .emoji{
@@ -196,11 +213,22 @@
     color: gray;
 }
 
-.sent{
-    background-color: rgb(44, 228, 44);
-    
+div.messages > article.message{
+    padding: 1rem 1.25rem;
+    border-radius: 1rem;
+    margin: 0 2rem .8rem 2rem;
+    background-color: #8edafc;
+    clear: both;
 }
 
-.received{
-    background-color: white;
+div.messages > article.message.received{
+    float: left;
+    background-color: #ffffff;
+    margin-right: 5rem;
+}
+
+div.messages > article.message.sent{
+    float: right;
+    background-color: #d5f9ba;
+    margin-left: 5rem;
 }
