--- a/style/style.css
+++ b/style/style.css
@@ -132,6 +132,7 @@
     border: none;
 
 }
+
 .utente{
     margin-left: 5px;
     margin-bottom: 5px;
@@ -140,7 +141,13 @@
     background-color: white;
 }
 .utente:hover{
-    background-color: rgb(213, 207, 207);
+    background-color: rgb(233, 232, 232);
+}
+
+.ultimo-messaggio-amico{
+    font-size: 10px;
+    margin-left: 5px;
+    color: rgb(213, 211, 211);
 }
 
 .ora{
@@ -182,17 +189,18 @@
 .text-area-amico{
     width: 100%;
     height: 50px;
-    background-color: lightgray;
+    background-color: #f3eeea;
+    justify-content: space-between;
+    
     
 }
 .tastiera{
-    justify-content: space-between;
-    align-items: center;
-    background-color: #f3eeea;
+    width: 80%;
 }
 
+
 .emoji{
-    width: 20%;
+    width: 10%;
     text-align: center;
     margin-top: 15px;
     font-size: 22px;
@@ -200,13 +208,13 @@
 }
 .area-testo-amico{
     height: 30px;
-    margin: 10px 10px 5px 0px;
-    width: 290px;
+    margin: 10px 10px 10px 0px;
+    width: 100%;
     border: none;
 
 }
 .microfono{
-    width: 20%;
+    width: 10%;
     text-align: center;
     margin-top: 15px;
     font-size: 22px;
